# repo-guide

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml  publish_site.yml  test.yml
_github/: index.html
_github/workflows/: index.html
search/: search_index.json
src/: index.html
src/gitscout/: cli.py
src/repo_guide/: cli.py  index.html
tests/: index.html  test_gitscout.py  test_repo_guide.py
