[project]
name = "repo-guide"
version = "0.4.1"
description = "Uses AI to help understand repositories and their changes."
readme = "README.md"
authors = [{name = "James Stout"}]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "bleach-allowlist>=1.0.3",
    "bleach>=6.2.0",
    "click",
    "gitpython>=3.1.43",
    "llm-gemini>=0.5a0",
    "llm>=0.19a0",
    "mkdocs-material>=9.5.46",
    "mkdocs>=1.6.1",
    "tqdm>=4.67.1",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
magika = [
    "magika>=0.6.0rc3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wolfmanstout/repo-guide"
Changelog = "https://github.com/wolfmanstout/repo-guide/releases"
Issues = "https://github.com/wolfmanstout/repo-guide/issues"
CI = "https://github.com/wolfmanstout/repo-guide/actions"

[project.scripts]
repo-guide = "repo_guide.cli:cli"

[dependency-groups]
dev = [
    "pytest",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "SIM105", "SIM116", "UP007"]
